# tron-client

./: .env.example  .gitignore  AI_DEVELOPER_WORKFLOW.md  BEFORE_AND_AFTER.md  CODE_CHANGE_INVENTORY.md  DEPLOYMENT.md  DEVELOPER_TESTING_GUIDE.md  DEVELOPER_TESTING_PLAYBOOK.md  DEVELOPER_TESTING_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MAGIC_GUIDE.md  OPERATORS.md  QUICKSTART.md  README.md  SELF_HOST.md  TESTING_GUIDE.md  TRON_COMPLETE_PICTURE.md  USER_GUIDE.md  YOUR_GOAL_ACHIEVED.md  abstraction_layer.py  ai_developer_simulation.py  app.py  async_demo.py  auth.py  auto_scaler.py  billing.py  consciousness_loop.py  dag_parallel_test.py  dashboard_v3.py  developer_demo.py  developer_experience_test.py  developer_getting_started.py  docker-compose.prod.yml  docker-compose.yml  dockerfile.py  e2e_debug.py  execution_graph.py  global_brain.py  global_optimizer.py  (+49 more)
.github/workflows/: deploy-cloud-run.yml  publish.yml
deploy/: README.md  cloud-run-quick.sh  fly-quick.sh  render-quick.sh  tron-core.service
deploy/nginx/: tron.conf
deploy/nginx/ssl/: tron-ssl.conf.template
examples/: abstraction_layer.py  ai_developer_simulation.py  async_demo.py  developer_demo.py  developer_experience_test.py  magic_api_demo.py
tkron/: __init__.py
tron/: __init__.py  cli.py  client.py  config.py  future.py  magic_future.py  serializer.py
tron.egg-info/: PKG-INFO  SOURCES.txt
tron_client.egg-info/: SOURCES.txt  requires.txt  top_level.txt
